<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/edit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/size_16"
            android:text="@string/edit_title" />

        <TextView
            android:id="@+id/truck_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/size_16"
            android:layout_toStartOf="@id/edit_title"
            android:text="@string/truck_name_title"
            android:textSize="@dimen/text_size_16" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/address_line1_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/truck_name_title"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_marginRight="@dimen/size_16">

            <EditText
                android:id="@+id/address_line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_line1_hint" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/address_line2_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_line1_wrapper"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_marginRight="@dimen/size_16">

            <EditText
                android:id="@+id/address_line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_line2_hint" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/state_city_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_line2_wrapper"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/city_wrapper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_16"
                android:layout_marginRight="@dimen/size_16"
                android:layout_weight="50">

                <EditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city_hint" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/state_wrapper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_16"
                android:layout_marginRight="@dimen/size_16"
                android:layout_weight="50">

                <EditText
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/state_hint" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/menu_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/state_city_container"
            android:layout_margin="@dimen/size_16"
            android:text="@string/todays_specials"
            android:textSize="@dimen/text_size_16"/>

        <zerobase.us.lunchbox.utils.NonScrollableListView
            android:id="@+id/menu_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/menu_heading"
            android:layout_margin="@dimen/size_16" />

        <Button
            android:id="@+id/shop_status_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/menu_items"
            android:textSize="@dimen/text_size_16"/>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>